src/app/globals.css
@import "tailwindcss";

html, body {
  overflow-x: hidden;
}

body {
  background: #050816;
  color: white;
  font-family: Arial, Helvetica, sans-serif;
}

@keyframes rotateSlow {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

.animate-rotateSlow {
  animation: rotateSlow 25s linear infinite;
}

